# Casisco

./: .gitignore  CMakeLists.txt  README.md  runScts.sh
cmake/: FindGRPC.cmake
protos/: casisco.proto
py/: AddVirtualToRequests.py  casisco_pb2.py  casisco_pb2_grpc.py  client.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Logger.cpp  Logger.hpp  Sources.cmake
src/server/: CMakeLists.txt  Context.hpp  Database.cpp  Database.hpp  IDatabase.hpp  Server.cpp  Server.hpp  Sources.cmake  main.cpp
src/server/database/: CMakeLists.txt  Database.cpp  Database.hpp  IProjectsDatabase.hpp  IUsersDatabase.hpp  ProjectsDatabase.cpp  ProjectsDatabase.hpp  Result.hpp  Sources.cmake  UsersDatabase.cpp  UsersDatabase.hpp
src/server/requestHandler/: Factory.cpp  Factory.hpp  IHandler.hpp  LoginUser.cpp  LoginUser.hpp  RegisterUser.cpp  RegisterUser.hpp
src/server/requestHandler/createProject/: Processor.cpp
src/server/requestHandler/loginUser/: Handler.cpp  Handler.hpp  Processor.cpp  Processor.hpp
src/server/requestHandler/project/createProject/: Handler.cpp  Handler.hpp  Processor.hpp
src/server/requestHandler/project/sendData/: Handler.cpp  Handler.hpp  Processor.cpp  Processor.hpp
src/server/requestHandler/registerUser/: Handler.cpp  Handler.hpp  Processor.cpp  Processor.hpp
src/server/requestHandler/user/: Database.cpp  Database.hpp
src/server/requestHandler/user/login/: Handler.cpp  Handler.hpp  Processor.cpp  Processor.hpp
src/server/requestHandler/user/register/: Handler.cpp  Handler.hpp  Processor.cpp  Processor.hpp
test/: CMakeLists.txt  Sources.cmake  main.cpp
test/SCT/: ServerStub.py  client.py  conftest.py  main.py  server_process.py  test_DatabaseInteraction.py  test_server.py
test/UT/: ServerTests.cpp
test/UT/requestHandlers/: LoginUserTests.cpp  RegisterUserTests.cpp  RegisterUserTests.cpp.autosave
test/UT/requestHandlers/loginUser/: ProcessorTests.cpp
test/UT/requestHandlers/registerUser/: HandlerTests.cpp  ProcessorTests.cpp
test/mocks/server/: IDatabaseMock.hpp
